Mixed both Versions!

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Вкъщи</a></li>
-                <li><a href="pobediteli.html">Победители</a></li>
+                <li><a href="winners.html">Победители</a></li>
                 <li><a href="team.html">Екип</a></li>
-                <li><a href="parmel.html">Parmel</a></li>
+                <li><a href="http://starwars.wikia.com/wiki/Parmel_sector" target="_blank">Parmel</a></li>
                 <li><a href="not-fun.html">Не-забавна-страница!</a></li>
             </ul>
             <form class="navbar-form navbar-right">
@@ -64,99 +64,71 @@
 <main class="container text-center">
     <div class="row">
         <aside class="col-sm-3">
-                <div class="panel panel-default">
-                    <div class="panel-heading long-heading">
-                        <a href="winners.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a>
-                    </div>
-
-                    <div class="panel-body">
+            <div class="panel panel-default">
+                <div class="panel-heading"><a href="pobediteli.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
+                <div class="panel-body">
+                    <a href="pobediteli.html">
                         <div class="well text-center">
-                            <a href="pobediteli.html#bill-gates">
-                                <h3>
-                                    Бил Гейтс
-                                </h3>
-                                <img src="resources/images/gates.png" class="img-responsive center-block img-bar"
-                                     alt="Gates Pic" />
+                            <h3>
+                                Бил Гейтс
+                            </h3>
+                            <img src="resources/images/gates.png" class="img-responsive center-block img-bar"
+                                 alt="Gates Pic">
 
-                                <p class="aside-p">
-                                    Да, наистина са били в една детска градина с Банкин!
-                                </p>
-                            </a>
+                            <p class="aside-p">
+                                Бил Гейтс си е играл с Наков в детската градина.
+                            </p>
                         </div>
-						<div class="well text-center">
-                            <a href="pobediteli.html#steve-jobs">
-                                <h3>
-                                    Стийв Джобс
-                                </h3>
-                                <img src="resources/images/Jobs.jpg" class="img-responsive center-block img-bar"
-                                     alt="Jobs Pic" />
-                                <p class="aside-p">
-                                    Джобс и Наков съученици
-                                </p>
-                            </a>
-                        </div>
-                        <div class="well text-center">
-                                <a href="pobediteli.html#mark-z">
-                                    <h3>
-                                        Марк Зукърбърг
-                                    </h3>
-                                    <img src="resources/images/mark_z.jpg" class="img-responsive center-block img-bar"
-                                         alt="Mark Zuck Pic" />
+                    </a>
+                    <div class="well text-center">
+                        <a href="pobediteli.html">
+                            <h3>
+                                Стив Джобс
+                            </h3>
+                            <img src="resources/images/Jobs.jpg" class="img-responsive center-block img-bar"
+                                 alt="Jobs Pic">
 
-                                    <p class="aside-p">
-                                        Вечните комшии Ангел и Марк
-                                    </p>
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-
-                <div class="panel panel-default">
-                    <div class="panel-heading"><a href=""><p>ЕКИП</p></a></div>
-                    <div class="panel-body">
-                        <div class="well text-center">
-                            <a href="team.html#nakov">
-                                <h3>
-                                    Наков
-                                </h3>
-                                <img src="resources/images/nakov.png" class="img-responsive center-block img-bar"
-                                     alt="Nakov Pic" />
-
-                                <p class="aside-p">
-                                    Наков си е Наков, знаем си го
-                                </p>
-                            </a>
-                        </div>
-
-                        <div class="well text-center">
-                            <a href="team.html#bankin">
-                                <h3>
-                                    Банкин
-                                </h3>
-                                <img src="resources/images/bankin.jpg" class="img-responsive center-block img-bar"
-                                     alt="Bankin Pic" />
-
-                                <p class="aside-p">
-                                    Банкин - css гуру
-                                </p>
-                            </a>
-                        </div>
-                        <div class="well text-center">
-                            <a href="team.html#angel">
-                                <h3>
-                                    Ангел
-                                </h3>
-                                <img src="resources/images/angel.jpg" class="img-responsive center-block img-bar"
-                                     alt="Ангел Pic" />
-
-                                <p class="aside-p">
-                                    Ангел - ТеамВорк лидер
-                                </p>
-                            </a>
-                        </div>
+                            <p class="aside-p">
+                                Стив Джобс е бил учител в на Наков.
+                            </p>
+                        </a>
                     </div>
                 </div>
+            </div>
+
+            <div class="panel panel-default">
+                <div class="panel-heading"><a href="ekip.html"><p>ЕКИП</p></a></div>
+                <div class="panel-body">
+                    <div class="well text-center">
+                        <a href="ekip.html">
+                            <h3>
+                                Наков
+                            </h3>
+                            <img src="resources/images/ekip/Nakov.jpg" class="img-responsive center-block img-bar"
+                                 alt="Nakov Pic">
+
+                            <p class="aside-p">
+                                Наков е Началото и Краят. Той е и Пътя и Истината и Живота.
+                            </p>
+                        </a>
+                    </div>
+
+                    <div class="well text-center">
+                        <a href="ekip.html">
+                            <h3>
+                                Ангел
+                            </h3>
+                            <img src="resources/images/ekip/Angel.jpg" class="img-responsive center-block img-bar"
+                                 alt="Angel Pic">
+
+                            <p class="aside-p">
+                                Наков: "Този човек е Моите Две Десни Ръце"
+                            </p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
         </aside>
 
         <section id="main-section" class="col-sm-9">
