--- a/not-fun.html
+++ b/not-fun.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Вкъщи</a></li>
-                <li><a href="pobediteli.html">Победители</a></li>
+                <li><a href="winners.html">Победители</a></li>
                 <li><a href="team.html">Екип</a></li>
                 <li><a href="parmel.html">Parmel</a></li>
                 <li class="active"><a href="not-fun.html">Не-забавна-страница!</a></li>
