--- a/team.html
+++ b/team.html
@@ -42,9 +42,9 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Вкъщи</a></li>
-                <li><a href="pobediteli.html">Победители</a></li>
+                <li><a href="winners.html">Победители</a></li>
                 <li class="active"><a href="team.html">Екип</a></li>
-                <li><a href="parmel.html">Parmel</a></li>
+                <li><a href="http://starwars.wikia.com/wiki/Parmel_sector" target="_blank">Parmel</a></li>
                 <li><a href="not-fun.html">Не-забавна-страница!</a></li>
             </ul>
             <form class="navbar-form navbar-right">
@@ -64,111 +64,178 @@
 <main class="container text-center">
     <div class="row">
         <aside class="col-sm-3">
-                <div class="panel panel-default">
-                    <div class="panel-heading"><a href=""><p>ПОБЕДИТЕЛИ</p></a></div>
-                    <div class="panel-body">
+            <div class="panel panel-default">
+                <div class="panel-heading"><a href="pobediteli.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
+                <div class="panel-body">
+                    <a href="pobediteli.html">
                         <div class="well text-center">
-                            <a href="pobediteli.html#steve-jobs">
-                                <h3>
-                                    Стив Джобс
-                                </h3>
-                                <img src="resources/images/jobs.jpg" alt="Стийв Джобс" class="img-responsive center-block img-bar"
-                                     alt="Стийв Джобс Pic">
+                            <h3>
+                                Бил Гейтс
+                            </h3>
+                            <img src="resources/images/gates.png" class="img-responsive center-block img-bar"
+                                 alt="Gates Pic">
 
-                                <p class="aside-p">
-                                    Към вторият победител Стийв Джобс
-                                </p>
-                            </a>
+                            <p class="aside-p">
+                                Бил Гейтс си е играл с Наков в детската градина.
+                            </p>
                         </div>
+                    </a>
+                    <div class="well text-center">
+                        <a href="pobediteli.html">
+                            <h3>
+                                Стив Джобс
+                            </h3>
+                            <img src="resources/images/Jobs.jpg" class="img-responsive center-block img-bar"
+                                 alt="Jobs Pic">
 
-                        <div class="well text-center">
-                            <a href="pobediteli.html#bill-gates">
-                                <h3>
-                                    Бил Гейтс
-                                </h3>
-                                <img src="resources/images/gates.png" class="img-responsive center-block img-bar"
-                                     alt="Бил Гейтс Pic">
-
-                                <p class="aside-p">
-                                    Към големия победител Бил Гейтс
-                                </p>
-                            </a>
-                        </div>
-
-                        <div class="well text-center">
-                            <a href="pobediteli.html#mark-z">
-                                <h3>
-                                    Бил Гейтс
-                                </h3>
-                                <img src="resources/images/mark_z.jpg" class="img-responsive center-block img-bar"
-                                     alt="Марк Зукърбърг Pic">
-
-                                <p class="aside-p">
-                                    Към големия победител Марк Зукърбърг
-                                </p>
-                            </a>
-                        </div>
+                            <p class="aside-p">
+                                Стив Джобс е бил учител в на Наков.
+                            </p>
+                        </a>
                     </div>
                 </div>
+            </div>
         </aside>
 
         <section id="main-section" class="col-sm-9">
-                <div class="well winners-well" id="nakov">
-                    <div class="panel winners-panel">
-                        <div class="panel-heading winners-panel">Наков Наков</div>
-                        <div class="panel-body winners-panel row center-block">
-                            <div class="col-sm-3 ">
-                                <img src="resources/images/nakov.jpg" alt="Наков" class="img-responsive winners-img center-block">
-                            </div>
-                            <div class="winners-text col-sm-9">
-                                Наков Наков, или както всички го познават само по малкото му име Наков, е пионер. Няма какво повече да кажем за него, защото ще е прекалееееееееееееено малко.
-                            </div>
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">CEO/ Managing Director</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <figure class="col-sm-3 col-xs-3">
+                            <img src="resources/images/ekip/Nakov.jpg" class="img-responsive ekip-img center-block"
+                                 alt="Nakov Pic">
+                            <figcaption class="figure-caption">Наков</figcaption>
+                        </figure>
+                        <div class="ekip-text col-sm-9 col-xs-9" id="Nakov">
+                            Наков е Най-Великият. Да се Свети Името Му.
+                            </br>
+                            Той е Началото и Краят. Той е и Пътя и Истината и Живота.
+                            </br>
+                            И който Го следва винаги ще му се компилира кода!
+                            Той е толкова Велик, че е учил Чък Норис да програмира!
                         </div>
                     </div>
                 </div>
-                <div class="well winners-well" id="angel">
-                    <div class="panel winners-panel">
-                        <div class="panel-heading winners-panel">AcheBG</div>
-                        <div class="panel-body winners-panel row center-block">
-                            <div class="col-sm-3">
-                                <img src="resources/images/angel.jpg" alt="Ангел" class="img-responsive winners-img">
-                            </div>
-                            <div class="winners-text col-sm-9">
-                                Всички го познават като АчеБеГе. Реално се казва Ангел. Винаги е готов да освободи зала за трейнърите, стига да има трейнъри и трейнвани. Като един мощен аспирин предотвратява главоболие на работодателите, като изгражда духа на работата в екип.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="well winners-well" id="bankin">
-                    <div class="panel winners-panel">
-                        <div class="panel-heading winners-panel">DJ Bankin  </div>
-                        <div class="panel-body winners-panel row center-block">
-                            <div class="col-sm-3">
-                                <img src="resources/images/bankin.jpg" alt="Банкин" class="img-responsive winners-img">
-                            </div>
-                            <div class="winners-text">
-                                Ники Банкин предпочита да го наричат Банкин. Фен е на модерната поп музика и не обича да го сравняват с много по-известия си адаш Никсън (този, дето изпълнява "Руса птчика" и "Пич от класа"). Обича да помага на незнаещите css, html, javascript и др. с полезни съвети и интересни задачки.
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            </div>
 
-                
-                <div class="well winners-well">
-                    <div class="panel winners-panel">
-                        <div class="panel-heading winners-panel">Бил Гейтс</div>
-                        <div class="panel-body winners-panel row center-block">
-                            <div class="col-sm-3">
-                                <img src="resources/images/gates.png" class="img-responsive winners-img">
-                            </div>
-                            <div class="winners-text col-sm-9">Panel ContentPanel ContentPanel
-                                ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel
-                                ContentPanel Content
-                            </div>
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Director Live Broadcast</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <figure class="col-sm-3 col-xs-3">
+                            <img src="resources/images/ekip/Angel.jpg" class="img-responsive ekip-img center-block"
+                                 alt="Angel Pic">
+                            <figcaption class="figure-caption">Ангел</figcaption>
+                        </figure>
+                        <div class="ekip-text col-sm-9 col-xs-9">
+                            "Моите Две Десни Ръце" - както го нарича шефа му (Наков е толкова велик, че лява ръка няма).
+                            Ангел е човекът с машинно масло в едната ръка и чук в другата. И той непрекъснато смазва и
+                            оправя
+                            машината на СофтУни.
                         </div>
                     </div>
-                </div> 
-            
+                </div>
+            </div>
+
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Creative Manager</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <figure class="col-sm-3 col-xs-3">
+                            <img src="resources/images/ekip/Bankin.jpg" class="img-responsive ekip-img center-block"
+                                 alt="Bankin Pic">
+                            <figcaption class="figure-caption">Ники Банкин</figcaption>
+                        </figure>
+                        <div class="ekip-text col-sm-9 col-xs-9">
+                            Ники Банкин е такъв талантлив дизайнер, че когато Бог(Наков) създавал Земята, го извигал
+                            да Му помогне. Ники с готовност приел, но проекта по който работил най-усърдно, били
+                            женските форми!
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Main Assisstant</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <figure class="col-sm-3 col-xs-3">
+                            <img src="resources/images/ekip/Alex.jpg" class="img-responsive ekip-img center-block"
+                                 alt="Alex Pic">
+                            <figcaption class="figure-caption">Алекс</figcaption>
+                        </figure>
+                        <div class="ekip-text col-sm-9 col-xs-9">
+                            Алекс е толкова красива, че е най-красивата. Всички млади кандидат-програмистки тайно й
+                            завиждат,
+                            защото и те искат да бъдат в предаването на Наков.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Recreational Manager</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <figure class="col-sm-3 col-xs-3">
+                            <img src="resources/images/ekip/Royal.jpg" class="img-responsive ekip-img center-block"
+                                 alt="Royal Pic">
+                            <figcaption class="figure-caption">RoYal</figcaption>
+                        </figure>
+                        <div class="ekip-text no-margin col-sm-9 col-xs-9">
+                            RoYal е най-добрият програмист сред играчите на билярд. Той също е единственият човек, който
+                            може да
+                            създаде задача за изпит със затворени очи. Затова сред някои от студентите е известен и като
+                            Човека-Дракон:
+                            </br>
+                            </br>
+                            <a href="https://judge.softuni.bg/Contests/Compete/Results/Simple/115" target="_blank">
+                                Справка: Изпита по Java Fundamentals 04.10.2015</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Technical Manager</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <figure class="col-sm-3 col-xs-3">
+                            <img src="resources/images/ekip/Nasko.jpg" class="img-responsive ekip-img center-block"
+                                 alt="Nasko Pic">
+                            <figcaption class="figure-caption">Наско</figcaption>
+                        </figure>
+                        <div class="ekip-text col-sm-9 col-xs-9 no-margin">
+                            Наско има коефициент на ителигентност 221! С едно повече от най-умния човек на Земята, което
+                            си е
+                            време-пространствен парадокс. Той спокойно би могъл да отиде в Церн и да открие няколко нови
+                            закона
+                            от квантовата физика, с което ще промени съдбата на хората, но цялата идея с предаването на
+                            Наков му
+                            е много забавна и затова той седи наоколо да види какво ще стане.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Junior Assistant</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <figure class="col-sm-3 col-xs-3">
+                            <img src="resources/images/ekip/Trifon.jpg" class="img-responsive ekip-img center-block"
+                                 alt="Trifon Pic">
+                            <figcaption class="figure-caption">Трифон</figcaption>
+                        </figure>
+                        <div class="ekip-text col-sm-9 col-xs-9">
+                            Трифон е най-новият член на екипа на СофтУни. Той наскоро беше посрещнат от Наков с думите:
+                            </br>
+                            "Welcome to the Force! But you are not a Jedi, yet!"
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
     </div>
