--- a/winners.html
+++ b/winners.html
@@ -1,28 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Winners</title>
-	<meta charset="utf-8">
+    <title>Стани Богат със СофтУни</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="resources/css/winners.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
 </head>
 <body>
-	<header>
-		<div class="container-fluid text-center">
-			<p class="headingText">
-				Големите Победители на
-	            <a href="index.html">
-	                СофтУни
-	                <img src="resources/images/logo.png" id="logo" class="img-responsive" style="display:inline" alt="Logo pic">
-	            </a>
-        	</p>
-        	<p class="white">
-	            Искате да станете Богат Програмист? Участвайте всеки ден в живото предаване "СофтУни"
-	        </p>
-		</div>
-	</header>
+<header class="jumbotron">
+    <div class="container-fluid text-center">
+        <p>
+            <a href="https://softuni.bg/" class="hvr-pulse-grow">
+                Стани Богат със СофтУни
+                <img src="resources/images/logo.png" id="logo" class="img-responsive" style="display:inline"
+                     alt="Logo pic">
+            </a>
+        </p>
+        <p class="white">
+            Искате да станете Богат Програмист? Участвайте всеки ден в живото предаване "СофтУни"
+        </p>
+    </div>
+</header>
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="fa fa-facebook menu-tweets" href="https://bg-bg.facebook.com/SoftwareUniversity/"
+               target="_blank"></a>
+            <a class="fa fa-twitter menu-tweets" href="https://twitter.com/softunibg" target="_blank"></a>
+            <a class="fa fa-google-plus menu-tweets" href="https://plus.google.com/+SoftuniBg/posts"
+               target="_blank"></a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">Вкъщи</a></li>
+                <li  class="active"><a href="winners.html">Победители</a></li>
+                <li><a href="team.html">Екип</a></li>
+                <li><a href="http://starwars.wikia.com/wiki/Parmel_sector" target="_blank">Parmel</a></li>
+                <li><a href="not-fun.html">Не-забавна-страница!</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <div class="form-group input-group">
+                    <input type="text" class="form-control" id="pwd" placeholder="Който търси Намира">
+            <span class="input-group-btn">
+                <button class="btn btn-default" type="button">
+                    <span class="glyphicon glyphicon-search"></span>
+                </button>
+            </span>
+                </div>
+            </form>
+        </div>
+    </div>
+</nav>
+
+    <div class="panel winners-panel winners-header">
+        <div class="panel-heading winners-panel"></div>
+        <div class="panel-body winners-panel row center-block">
+            <div class="col-sm-3">
+                <img src="resources/images/cash.png" class="img-responsive winners-img">
+            </div>
+            <div class="winners-text col-sm-9">Тук ще намерите кратка история на това как нашите победители са стигнали до тук, тежките мъки, на които са били подложение и стоическите кодове, които са ги направили толкова богати, че да не им се налага да искат пари на заем от приятели, за да си погасят вноската по кредита.
+            </div>
+        </div>
+    </div>
+
+<main class="container text-center">
+    <div class="row">
+        <aside class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-heading"><a href="ekip.html"><p>ЕКИП</p></a></div>
+                <div class="panel-body">
+                    <div class="well text-center">
+                        <a href="ekip.html">
+                            <h3>
+                                Наков
+                            </h3>
+                            <img src="resources/images/ekip/Nakov.jpg" class="img-responsive center-block img-bar"
+                                 alt="Nakov Pic">
+
+                            <p class="aside-p">
+                                Наков е Началото и Краят. Той е и Пътя и Истината и Живота.
+                            </p>
+                        </a>
+                    </div>
+
+                    <div class="well text-center">
+                        <a href="ekip.html">
+                            <h3>
+                                Ангел
+                            </h3>
+                            <img src="resources/images/ekip/Angel.jpg" class="img-responsive center-block img-bar"
+                                 alt="Angel Pic">
+
+                            <p class="aside-p">
+                                Наков: "Този човек е Моите Две Десни Ръце"
+                            </p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </aside>
+
+        <section id="main-section" class="col-sm-9">
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Бил Гейтс</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <div class="col-sm-3 ">
+                            <img src="resources/images/gates.png" class="img-responsive winners-img center-block" alt="Gates pic">
+                        </div>
+                        <div class="winners-text col-sm-9">
+                            Бил Гейтс си е играл с Наков в детската градина.
+                            Той толкова се е впечатлил от неговия интелект, че избягва, не завършва обучението си и
+                            създава най-популярната операционна система,
+                            само за да докаже че и той става за нещо.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Стив Джобс</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <div class="col-sm-3">
+                            <img src="resources/images/jobs.jpg" class="img-responsive winners-img" alt="Jobs pic">
+                        </div>
+                        <div class="winners-text col-sm-9">
+                            </br>
+                            Стив Джобс е бил учител в детската градина на Наков.
+                            Когато Наков надминава учителя си, Джобс напуска за да създаде Епъл, но в крайна сметка не
+                            остава програмист, а просто търговец и CEO.
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Марк Зъкърбърг</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <div class="col-sm-3">
+                            <img src="resources/images/mark.jpg" class="img-responsive winners-img" alt="Mark pic">
+                        </div>
+                        <div class="winners-text col-sm-9">
+                            </br>
+                            Марк Зъкърбърг е учил в СофтУни. "Един от НЕ - топ судентите ми!" - както го определя Наков.
+                            Обиден Марк се депресира и напуска. В търсене на нови приятели, с които да сподели мъката си
+                            той създава фейсбук.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Гейб Нюел</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <div class="col-sm-3">
+                            <img src="resources/images/gaben.png" class="img-responsive winners-img" alt="Gabe pic">
+                        </div>
+                        <div class="winners-text">
+                            </br>
+                            Не може да се твърди че Гейб е учил в СофтУни.
+                            Той прекарва изцяло времето си в кафето на университета играейки непрекъснато на конзола.
+                            Когато Наков отива при него и му казва, че това е несериозно, Гейб си тръгва.
+                            В крайна сметка той основава Valve, междувременно ставайки милиардер, за да може пак да си
+                            играе по цял ден, но и да му плащат за това!
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="well winners-well">
+                <div class="panel winners-panel">
+                    <div class="panel-heading winners-panel">Сергей Брин и Лари Пейдж</div>
+                    <div class="panel-body winners-panel row center-block">
+                        <div class="col-sm-3">
+                            <img src="resources/images/page-brin.jpg" class="img-responsive winners-img" alt="Brin and Larry pic">
+                        </div>
+                        <div class="winners-text">
+                            </br>
+                            Сергей и Лари са конкуренти на Наков, още от детската градина. И те също искат да създадат
+                            обучение по програмиране. Неспособни да се сравняват с Наков и неговата система, те основават
+                            обиковена търсачка в интернет.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</main>
+
+
 </body>
 </html>
