--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="jumbotron">
     <div class="container-fluid text-center">
         <p>
-            <a href="https://softuni.bg/" class="hvr-pulse-grow">
+            <a href="https://softuni.bg/" target="_blank" class="hvr-pulse-grow">
                 Стани Богат със СофтУни
                 <img src="resources/images/logo.png" id="logo" class="img-responsive" style="display:inline"
                      alt="Logo pic" />
@@ -67,8 +67,8 @@
             <div class="panel panel-default">
                 <div class="panel-heading"><a href="pobediteli.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
                 <div class="panel-body">
-                    <a href="pobediteli.html">
-                        <div class="well text-center">
+                    <div class="well text-center">
+                        <a href="winners.html">
                             <h3>
                                 Бил Гейтс
                             </h3>
@@ -78,10 +78,10 @@
                             <p class="aside-p">
                                 Бил Гейтс си е играл с Наков в детската градина.
                             </p>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                     <div class="well text-center">
-                        <a href="pobediteli.html">
+                        <a href="winners.html">
                             <h3>
                                 Стив Джобс
                             </h3>
@@ -100,7 +100,7 @@
                 <div class="panel-heading"><a href="ekip.html"><p>ЕКИП</p></a></div>
                 <div class="panel-body">
                     <div class="well text-center">
-                        <a href="ekip.html">
+                        <a href="team.html">
                             <h3>
                                 Наков
                             </h3>
@@ -114,7 +114,7 @@
                     </div>
 
                     <div class="well text-center">
-                        <a href="ekip.html">
+                        <a href="team.html">
                             <h3>
                                 Ангел
                             </h3>
@@ -143,7 +143,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <a href="http://www.softuni.bg">
+                            <a href="http://www.softuni.bg" target="_blank">
                                 <img src="resources/images/nakov2.jpg" alt="Image" />
                                 <div class="carousel-caption">
                                     <h3>Искаш да станеш много богат?</h3>
