--- a/team.html
+++ b/team.html
@@ -68,7 +68,7 @@
                 <div class="panel-heading"><a href="pobediteli.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
                 <div class="panel-body">
                     <div class="well text-center">
-                        <a href="pobediteli.html">
+                        <a href="winners.html">
                             <h3>
                                 Бил Гейтс
                             </h3>
@@ -81,7 +81,7 @@
                         </a>
                     </div>
                     <div class="well text-center">
-                        <a href="pobediteli.html">
+                        <a href="winners.html">
                             <h3>
                                 Стив Джобс
                             </h3>
