--- a/winners.html
+++ b/winners.html
@@ -79,7 +79,7 @@
                 <div class="panel-heading"><a href="ekip.html"><p>ЕКИП</p></a></div>
                 <div class="panel-body">
                     <div class="well text-center">
-                        <a href="ekip.html">
+                        <a href="team.html">
                             <h3>
                                 Наков
                             </h3>
@@ -93,7 +93,7 @@
                     </div>
 
                     <div class="well text-center">
-                        <a href="ekip.html">
+                        <a href="team.html">
                             <h3>
                                 Ангел
                             </h3>
